--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,6 @@
 <!-- start custom head snippets -->
-
+<meta name="google-signin-client_id" content="97070892278-k0o2sij180ivma5tfksej87rb85gboio.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
