--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    {% if page.google == true %}
+      {% include google/googleIni.html %}
+    {% endif %}
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
@@ -36,6 +39,9 @@
       </footer>
     </div>
 
+    {% if page.google == true %}
+      {% include google/googleFim.html %}
+    {% endif %}
     {% include scripts.html %}
 
   </body>
