--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,36 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+div.no-login {
+    opacity:0.9;
+    background-color:#fff; 
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+}
+
+div.no-login-dlg {
+    background-color: gray;
+    color: white;
+    position: relative;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+    padding:20px;
+}
+
+div.no-register-dlg {
+    background-color: #6b5b95;
+    color: white;
+    position: relative;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+    padding:20px;
+}
+
+a.no-regeister-dlg  {
+ color: greenyellow;
+}
