Atualização do eBook

--- a/_includes/check-registration.html
+++ b/_includes/check-registration.html
@@ -33,7 +33,7 @@
 
 <div id="no-login-register" class="no-login" style="display: none">
   <div id="no-login" class="no-login-dlg" style="display: none">
-    <p style="text-align: center">Para acessar esta página você precisa estar matriculado no curso <b>Livros Personalizados</b>.</p>
+    <p style="text-align: center">Para acessar esta página você precisa estar logado na sua conta <b>Google</b>.</p>
     <div style="text-align: center">
       <button id="sign-in-or-out-button"
                 style="margin-left: 25px"
