--- a/_includes/google/googleIni.html
+++ b/_includes/google/googleIni.html
@@ -66,7 +66,7 @@
     //function setSigninStatus(isSignedIn)
     //fica dentro do código da página para controlar os itens específicos que devem ou não estar disponíveis.
 
-    const nomePlanilhaCurso = "Livros para uma turma (124578)";
+    const nomePlanilhaCurso = "Livros para uma turma (124578) v.1";
     function criarArquivosCurso(idBookPersonalizar) {
       console.log("criando arquivos do curso");
       var body = { 'title': nomePlanilhaCurso };
